fixed a bug where i named my table a div; fixed HTML lines 36 and 49

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         Current Train Schedule
                     </div>
                     <div class="card-body">
-                        <div class="table table-sm table-hover" id="train-table">
+                        <table class="table table-sm table-hover" id="train-table">
                             <thead id="table-head" class="font-weight-bold">
                                 <tr>
                                     <th scope="col">Train Name</th>
@@ -46,7 +46,7 @@
                             <tbody id="train-input">
 
                             </tbody>
-                        </div>
+                        </table>
                     </div>
                 </div>
             </div>
