--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         Add Train
                     </div>
                     <div class="card-body">
-                        <div class="form">
+                        <form class="form">
                             <div class="form-group row">
                                 <div class="col-md-12 font-weight-bold text-dark">
                                     <label for="train-name">Train Name</label>
@@ -97,7 +97,7 @@
                                     <input type="submit" class="btn btn-default bg-primary text-white" name="Submit" id="submit-button">
                                 </div>
                             </div>
-                        </div>
+                        </form>
                     </div>
                 </div>
             </div>
